--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elite Spa Movers - Book Appointment</title>
     <style>
-        /* wix-integration/booking-form.css */
+        body {
+            margin: 0;
+            padding: 20px;
+            background: #f4f4f4;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
 
         .booking-form {
             max-width: 600px;
             margin: 0 auto;
             padding: 20px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background: #f9f9f9;
             border-radius: 12px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -71,46 +75,6 @@
 
         .form-row .form-group {
             flex: 1;
-        }
-
-        .file-upload {
-            position: relative;
-            display: inline-block;
-            cursor: pointer;
-            width: 100%;
-        }
-
-        .file-upload input[type="file"] {
-            position: absolute;
-            opacity: 0;
-            width: 100%;
-            height: 100%;
-            cursor: pointer;
-        }
-
-        .file-upload-label {
-            display: block;
-            padding: 12px 16px;
-            background: #ecf0f1;
-            border: 2px dashed #bdc3c7;
-            border-radius: 8px;
-            text-align: center;
-            color: #7f8c8d;
-            transition: all 0.3s ease;
-        }
-
-        .file-upload:hover .file-upload-label {
-            background: #d5dbdb;
-            border-color: #95a5a6;
-        }
-
-        .file-preview {
-            margin-top: 10px;
-            padding: 10px;
-            background: #e8f5e8;
-            border-radius: 6px;
-            font-size: 14px;
-            color: #27ae60;
         }
 
         .submit-btn {
@@ -252,17 +216,6 @@
                 <textarea id="notes" name="notes" rows="4" placeholder="Any special instructions, access information, or additional details..."></textarea>
             </div>
 
-            <div class="form-group">
-                <label>Upload Photo (Optional)</label>
-                <div class="file-upload">
-                    <input type="file" id="photoUpload" accept="image/jpeg,image/jpg,image/png" />
-                    <label for="photoUpload" class="file-upload-label">
-                        📷 Click to upload a photo (JPG, PNG - Max 10MB)
-                    </label>
-                </div>
-                <div id="filePreview" class="file-preview" style="display: none;"></div>
-            </div>
-
             <button type="submit" class="submit-btn" id="submitBtn">
                 📅 Request Appointment
             </button>
@@ -277,8 +230,6 @@
     </div>
 
     <script>
-        // wix-integration/booking-form.js
-
         // Configuration - REPLACE WITH YOUR ACTUAL FIREBASE PROJECT URL
         const API_BASE_URL = 'https://us-central1-YOUR-PROJECT-ID.cloudfunctions.net';
 
@@ -287,38 +238,10 @@
         const submitBtn = document.getElementById('submitBtn');
         const loadingSpinner = document.getElementById('loadingSpinner');
         const alertContainer = document.getElementById('alertContainer');
-        const photoUpload = document.getElementById('photoUpload');
-        const filePreview = document.getElementById('filePreview');
 
         // Set minimum date to today
         const today = new Date().toISOString().split('T')[0];
         document.getElementById('requestedDate').min = today;
-
-        // File upload preview
-        photoUpload.addEventListener('change', function(e) {
-            const file = e.target.files[0];
-            if (file) {
-                // Validate file type
-                const allowedTypes = ['image/jpeg', 'image/jpg', 'image/png'];
-                if (!allowedTypes.includes(file.type)) {
-                    showAlert('Please select a JPG or PNG image file.', 'error');
-                    this.value = '';
-                    return;
-                }
-
-                // Validate file size (10MB)
-                if (file.size > 10 * 1024 * 1024) {
-                    showAlert('File size must be less than 10MB.', 'error');
-                    this.value = '';
-                    return;
-                }
-
-                filePreview.style.display = 'block';
-                filePreview.innerHTML = `✅ Selected: ${file.name} (${(file.size / 1024 / 1024).toFixed(2)} MB)`;
-            } else {
-                filePreview.style.display = 'none';
-            }
-        });
 
         // Form submission
         form.addEventListener('submit', async function(e) {
@@ -344,13 +267,6 @@
                     throw new Error(availability.reason || 'Time slot not available');
                 }
 
-                // Upload photo if present
-                let photoUrl = null;
-                const photoFile = photoUpload.files[0];
-                if (photoFile) {
-                    photoUrl = await uploadPhoto(photoFile);
-                }
-
                 // Prepare form data
                 const formData = {
                     fullName: document.getElementById('fullName').value,
@@ -361,7 +277,7 @@
                     requestedDate: requestedDate,
                     requestedTime: requestedTime,
                     notes: document.getElementById('notes').value,
-                    photoUrl: photoUrl
+                    photoUrl: null
                 };
 
                 // Submit appointment
@@ -378,7 +294,6 @@
                 if (response.ok) {
                     showAlert('🎉 Appointment request submitted successfully! We\'ll contact you within 24 hours to confirm.', 'success');
                     form.reset();
-                    filePreview.style.display = 'none';
                 } else {
                     throw new Error(result.error || 'Failed to submit appointment');
                 }
@@ -414,37 +329,6 @@
                 console.error('Error checking availability:', error);
                 return { available: true }; // Assume available if check fails
             }
-        }
-
-        async function uploadPhoto(file) {
-            return new Promise((resolve, reject) => {
-                const reader = new FileReader();
-                reader.onload = async function(e) {
-                    try {
-                        const response = await fetch(`${API_BASE_URL}/uploadPhoto`, {
-                            method: 'POST',
-                            headers: {
-                                'Content-Type': 'application/json',
-                            },
-                            body: JSON.stringify({
-                                imageData: e.target.result,
-                                fileName: file.name
-                            })
-                        });
-
-                        const result = await response.json();
-                        
-                        if (response.ok) {
-                            resolve(result.photoUrl);
-                        } else {
-                            throw new Error(result.error || 'Failed to upload photo');
-                        }
-                    } catch (error) {
-                        reject(error);
-                    }
-                };
-                reader.readAsDataURL(file);
-            });
         }
 
         function setLoadingState(loading) {
