--- a/index.html
+++ b/index.html
@@ -416,20 +416,20 @@
     <div class="booking-form">
         <div class="form-header">
             <h2>📞 Request an Appointment</h2>
-            <p>Fill out the form below and we'll get back to you within 24 hours</p>
+            <p>Fill out the request below and we'll get back to you within 24 hours to confirm your appointment</p>
         </div>
 
-        <form id="bookingForm">
-            <div class="form-row">
-                <div class="form-group">
-                    <label for="fullName">Full Name <span class="required">*</span></label>
-                    <input type="text" id="fullName" name="fullName" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email Address <span class="required">*</span></label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-            </div>
+       <form id="bookingForm">
+    <div class="form-row">
+        <div class="form-group">
+            <label for="fullName">Full Name <span class="required">*</span></label>
+            <input type="text" id="fullName" name="name" required>
+        </div>
+        <div class="form-group">
+            <label for="email">Email Address <span class="required">*</span></label>
+            <input type="email" id="email" name="email" required>
+        </div>
+    </div>
 
             <div class="form-row">
                 <div class="form-group">
